--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="IJ.Start.Canon Setup || Canon IJ Printer Setup || ij.start.canon" />
-<meta name="msvalidate.01" content="" />
+<meta name="msvalidate.01" content="<meta name="msvalidate.01" content="3D04A2B5CAF00BE6FFD47FD72CAB2911" />" />
     <link rel="stylesheet"  href="style.css">
     <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
